# beagle

./: .coverage  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
beagle/: app.py  grep_formatter.py  hound.py  openstack.py  search.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst
doc/source/install/: index.rst
doc/source/user/: index.rst
tests/: test_search.py
tools/: travis.sh
