[metadata]
name = beagle
summary = Command line client for Hound
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://github.com/beaglecli/beagle/
python-requires = >=3.9
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
install_requires =
   setuptools

[files]
packages =
    beagle

[extras]
test =
  coverage
  pytest
  pytest-cov
  testtools
  fixtures
  flake8

[entry_points]
console_scripts =
    beagle = beagle.app:main
beagle.cli =
    search = beagle.search:Search
cliff.formatter.list =
    grep = beagle.grep_formatter:GrepFormatter
    link = beagle.openstack:OSLinkFormatter
openstack.cli =
    code_search = beagle.search:Search

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
